Fix Arsonist preventing game end, Fix Warlock, Add Clumsy (add-on), Add Stained (add-on), Killing Machine setting to bypass shields

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -146,7 +146,7 @@
   "Lurker": "Lurker",
   "Convict": "Convict",
   "Visionary": "Visionary",
-  "Refugee": "Refugee",
+  "Refugee": "Renegade",
   "Underdog": "Underdog",
   "Luckey": "Luckey",
   "Needy": "Lazy Guy",
@@ -258,6 +258,8 @@
   "Ntr": "Neptune",
   "Watcher": "Watcher",
   "Sleuth": "Sleuth",
+  "Stained": "Stained",
+  "Clumsy": "Clumsy",
   "Mischievous": "Mischievous",
   "Flashman": "Flash",
   "Undead": "Undead",
@@ -313,6 +315,8 @@
   "Prefix.Ntr": "Neptune",
   "Prefix.Watcher": "Watcher",
   "Prefix.Sleuth": "Sleuth",
+  "Prefix.Stained": "Stained",
+  "Prefix.Clumsy": "Clumsy",
   "Prefix.Mischievous": "Mischievous",
   "Prefix.Flashman": "Flash",
   "Prefix.Undead": "Undead",
@@ -565,6 +569,8 @@
   "AsthmaticInfo": "Stop And Go",
   "MagnetInfo": "Pull your victims to you",
   "SleuthInfo": "Know the roles of the bodies you report",
+  "StainedInfo": "Your killer gets a violet name for 3s",
+  "ClumsyInfo": "You trip while walking",
   "MischievousInfo": "You can sabotage",
   "UnreportableInfo": "Your body can't be reported",
   "RogueInfo": "Work against your team and win with other Rogues",
@@ -654,7 +660,7 @@
   "LurkerInfoLong": "(Impostors):\\nAs the Lurker, you can jump into a vent to reduce your cooldown by a certain number of seconds. After you kill, your cooldown is reset to its original value.",
   "ConvictInfoLong": "(Madmates):\\nAs the Convict, you originally were an Executioner or Lawyer.\\nYour target had been killed and now you work for the Impostors.",
   "VisionaryInfoLong": "(Impostors):\\nAs the Visionary, you see the alignments of living players during a meeting.\\nThe following info will be displayed on the player.:\\n- The Red name indicates the Impostors.\\n- The Cyan name indicates the Crewmates.\\n- The Gray name indicates the Neutrals.",
-  "RefugeeInfoLong": "(Madmates):\\nAs the Refugee, you were an Amnesiac who remembered an Impostor role.\\n\\nHelp the Impostors kill the crewmates.",
+  "RefugeeInfoLong": "(Madmates):\\nAs the Renegade, you were an Amnesiac who remembered an Impostor role.\\n\\nHelp the Impostors kill the crewmates.",
   "UnderdogInfoLong": "(Impostors):\\nAs the Underdog, your kill cooldown is longer until there's a certain amount of players alive.\\nAfter that, your cooldown is shorter.",
   "EvilDivinerInfoLong": "(Impostors):\\nAs the Consigliere, you can reveal the roles of other players using your kill button.\\n\\nSingle click: Reveal role\\nDouble click: Kill\\n\\nIf you run out of reveal uses, your kill button functions normally.",
   "LuckeyInfoLong": "(Crewmates):\\nThe Luckey has a probability to evade a player's kill attempt, set by the host. The killer sees a shield-animation, but Luckey is unaware.",
@@ -758,7 +764,7 @@
   "BakerInfoLong": "(Neutrals):\\nAs the Baker, you give out bread.\\nAt the beginning of each meeting, messages will be given out.\\n\\nIf you finish your tasks, you become Famine when a meeting is called.",
   "FamineInfoLong": "(Neutrals):\\nAs the Famine, you give out poisoned bread.\\nPlayers with poisoned bread die at the end of the meeting if the Famine is not exiled.\\n\\nIf the Famine is alive at the end of the game, they steal the win.",
   "SpiritcallerInfoLong": "(Neutrals):\\nAs the Spiritcaller, your victims become Evil Spirits after they die. These spirits can help you win by freezing other players for a short time and/or blocking their vision. Alternatively, the spirits can give you a shield that protects you briefly from an attempted kill.",
-  "AmnesiacInfoLong": "(Neutrals):\\nAs the Amnesiac, use your kill button on a player to remember their role.\\n\\nIf the target was an Impostor, you'll become a <b><color=#ff1919>Refugee</color></b>.\\nIf the target was a crewmate, you'll become a <b><color=#FFB347>Sheriff</color></b>.\\nIf the target was a passive neutral or a neutral killer not specified, you'll become the role defined in the settings.\\nIf the target was a neutral killer of a select few, you'll become the role they are.",
+  "AmnesiacInfoLong": "(Neutrals):\\nAs the Amnesiac, use your kill button on a player to remember their role.\\n\\nIf the target was an Impostor, you'll become a <b><color=#ff1919>Renegade</color></b>.\\nIf the target was a crewmate, you'll become a <b><color=#FFB347>Sheriff</color></b>.\\nIf the target was a passive neutral or a neutral killer not specified, you'll become the role defined in the settings.\\nIf the target was a neutral killer of a select few, you'll become the role they are.",
   "MasochistInfoLong": "(Neutrals):\\nAs the Masochist, your goal is to get attacked a few times to win.\\n\\nYou cannot be guessed, as that adds to your attack count.",
   "DoomsayerInfoLong": "(Neutrals):\\nThe Doomsayer can guess the role of a certain player during the meeting.\\nIf the Doomsayer guesses a certain number of roles (the number depends on the host settings) then he wins.\\nThe guessing command is: /bt [player id] [role]\\nYou can see the player's id before the player's name, or use the /id command to view the id of all players.",
   "LastImpostorInfoLong": "(Add-ons):\\nLast Impostor gets reduced kill cooldown.",
@@ -768,6 +774,8 @@
   "WatcherInfoLong": "(Add-ons):\\nDuring the meeting, Watcher can see everyone's votes.",
   "MagnetInfoLong": "(Add-ons):\\nWhen you kill, your victims lunge to you, instead of you lunging to them",
   "SleuthInfoLong": "(Add-ons):\\nYou know the roles of the bodies you report.",
+  "StainedInfoLong": "(Add-ons):\\nYour killer gets a violet name for 3 seconds.",
+  "ClumsyInfoLong": "(Add-ons):\\nWhile walking, you have a small chance of tripping, meaning you freeze for a few seconds.",
   "MischievousInfoLong": "(Add-ons):\\nYou can sabotage.",
   "FlashmanInfoLong": "(Add-ons):\\nThe Flash is faster by default.",
   "GiantInfoLong": "(Add-ons):\\nThe Giant is slower by default.",
@@ -1130,6 +1138,7 @@
   "RemainingText.EjectionSuffix.NKPlural": "remain.",
   "Cooldown": "Cooldown",
   "CurseCooldown": "Curse Cooldown",
+  "FreezeAfterCurseKill": "Freeze After Killing via Cursed Player",
   "KillCooldown": "Kill Cooldown",
   "VentCooldown": "Vent Cooldown",
   "MaxInVentTime": "Max In-Vent Time",
@@ -1679,7 +1688,7 @@
   "UndertakerInfoLong": "(Impostors):\\nAs the Undertaker, you can mark your target using your kill button, then shapeshift/pet to kill them. However, the person you assassinate will teleport to your location when you shapeshift, so their body will be wherever you are! Use this well to hide bodies!",
   "Romantic": "Romantic",
   "RomanticInfo": "Select your partner and win with them",
-  "RomanticInfoLong": "(Neutral):\\nAs the Romantic, you can first use your kill button on someone to select them as your partner.\\nAfter that, as long as both you and your partner are alive, you can use your kill button on anyone to give your partner a temporarily shield. If your partner wins, you win too.\\n\\nIf your partner dies, your role will change according to the following conditions:\\nIf your partner had a kill button of any type, you will get the same role as they were.\\nIf your partner was a Non-Killing Neutral or your partner died by themselves (suicided or has no real killer), you will turn into the Ruthless Romantic, which is a basic neutral killer: Be the last one standing to win. If you win, your partner wins too.\\nIf your target was an Impostor, you become a Refugee. Your job is now to help the impostors (and thus your partner) win.\\nIn every other case, you become the Vengeful Romantic. Your goal is to kill the killer of your partner. If you do so, you and your partner win with the winning team. If you try to kill anyone else, you will die.",
+  "RomanticInfoLong": "(Neutral):\\nAs the Romantic, you can first use your kill button on someone to select them as your partner.\\nAfter that, as long as both you and your partner are alive, you can use your kill button on anyone to give your partner a temporarily shield. If your partner wins, you win too.\\n\\nIf your partner dies, your role will change according to the following conditions:\\nIf your partner had a kill button of any type, you will get the same role as they were.\\nIf your partner was a Non-Killing Neutral or your partner died by themselves (suicided or has no real killer), you will turn into the Ruthless Romantic, which is a basic neutral killer: Be the last one standing to win. If you win, your partner wins too.\\nIf your target was an Impostor, you become a Renegade. Your job is now to help the impostors (and thus your partner) win.\\nIn every other case, you become the Vengeful Romantic. Your goal is to kill the killer of your partner. If you do so, you and your partner win with the winning team. If you try to kill anyone else, you will die.",
   "VengefulRomantic": "Vengeful Romantic",
   "VengefulRomanticInfo": "Kill the killer of your Partner",
   "VengefulRomanticInfoLong": "(Neutral):\\nAs Vengeful Romantic you need to  kill the killer of your partner. You only get one shot. If you kill wrong player, you misfire. Upon killing the right target you win with the winning team along with your Romantic Partner",
@@ -2844,7 +2853,7 @@
   "EveryoneCanVent": "Everyone Can Vent",
   "OverrideScientistBasedRoles": "Also Override Scientist Based Roles to Engineer",
   "WhackAMole": "Whack-A-Mole",
-  "SpawnAdditionalRefugeeOnImpsDead": "Random <#8cffff>Crewmate</color> Turns To <#ff1919>Refugee</color> When All <#ff1919>Impostors</color> Die",
+  "SpawnAdditionalRefugeeOnImpsDead": "Random <#8cffff>Crewmate</color> Turns To <#ff1919>Renegade</color> When All <#ff1919>Impostors</color> Die",
   "SpawnAdditionalRefugeeWhenNKAlive": "Spawn Even If a <#ffab1b>Neutral Killer</color> is Alive",
   "NoPetActionMsg1": "You just ate a cookie",
   "NoPetActionMsg2": "You look around",
@@ -2988,6 +2997,7 @@
   "RecruitedToDeathknight": "The Necromancer recruited you to be their Deathknight!",
   "InvalidUndeadTarget": "Target cannot be recruited",
   "Undead-": "Undead ",
+  "BypassShields": "Bypass Shields When Killing",
   "SoulHunter": "Soul Hunter",
   "SoulHunterInfo": "Hunt Souls To Win",
   "SoulHunterInfoLong": "(Neutrals):\\nAs the Soul Hunter, you can mark your target via your kill button. In the next meeting, you'll be frozen for a set amount of seconds and your target will be notified about being your target. Your target will not be able to vent, call a meeting or kill you. You must kill your target within a specified number of seconds, else you lose a soul. If you kill your target in time, you gain a soul. Collect a set amount of souls to satisfy your win condition. If your win condition is satisfied at the end of the game, you'll win with the winning team.",
@@ -3299,7 +3309,7 @@
   "SelfGuessMasochist": "You can't self guess as a Masochist, you cheater!",
   "GuessMasochistBlocked": "Masochist cannot guess due to self guessing.",
   "RememberCooldown": "Remember Cooldown",
-  "RefugeeKillCD": "<color=#ff1919>Refugee</color>'s Kill Cooldown",
+  "RefugeeKillCD": "<color=#ff1919>Renegade</color>'s Kill Cooldown",
   "AmnesiacRemembered": "An Amnesiac remembered your role!",
   "AmnesiacInvalidTarget": "Remember failed",
   "RememberedNeutralKiller": "You remembered you were a neutral killer!",
