Add Commander, Neutrals have their own reveal screen (setting)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2877,6 +2877,7 @@
   "NoPetActionMsgNeutral2": "You question yourself how did you get here",
   "TruantWaitingTime": "Waiting Time After Meetings",
   "WMMode": "<color=#00ffa5>Mode:</color> <color=#ffffff><b>{0}</b></color>",
+  "UniqueNeutralRevealScreen": "Each <#ffab1b>Neutral</color> Role Has Its Own Reveal Screen",
   "Eclipse": "Eclipse",
   "EclipseInfo": "Your vision increases with each kill you get",
   "EclipseInfoLong": "(Neutral):\\nAs the Eclipse, your job is to kill everyone and be the last one standing to win.\\nYou start with a low vision, and with each kill you get, it slowly increases.",
@@ -3212,6 +3213,11 @@
   "BanditStealMode": "Steal happens",
   "BanditCanStealBetrayalAddon": "Can Steal Betrayal Addons",
   "BanditCanStealImpOnlyAddon": "Can Steal <color=#ff1919>Impostor</color> Only Addons",
+  "Commander": "Commander",
+  "CommanderInfo": "Command your team",
+  "CommanderInfoLong": "(Crewmates):\\nAs the Commander, you can switch between 2 modes by venting: Whistle and Mark. You can execute the selected action by shapeshifting/petting your pet.\\n\\nMark: Marks your shapeshift target with a unique color visible to all impostors. Use this to command them to kill that player!\\n\\nWhistle: This tells all impostors to come to you and gives them each an arrow pointing towards you.",
+  "CommanderNotify": "The Commander wants you to meet with them",
+  "CommanderTarget": "<size=1.7>Commander's target</color>",
   "Nimble": "Nimble",
   "NimbleInfo": "Grants Vent Access",
   "NimbleInfoLong": "\\nGrants vent access for crewmate roles.",
