Small fixes, setting for Commander

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -48,7 +48,7 @@
   "GuesserMode": "Guesser Mode",
   "CrewmatesCanGuess": "<color=#8cffff>Crewmates</color> can guess",
   "ImpostorsCanGuess": "<color=#ff1919>Impostors</color> can guess",
-  "NeutralKillersCanGuess": "<color=#7f8c8d>Neutral Killers</color> can guess",
+  "NeutralKillersCanGuess": "<color=#ffab1b>Neutral Killers</color> can guess",
   "PassiveNeutralsCanGuess": "Passive <color=#ffab1b>Neutrals</color> can guess",
   "CovenCanGuess": "<color=#8e44ad>Coven</color> members can guess",
   "CanGuessAddons": "Can Guess Add-ons",
@@ -444,7 +444,7 @@
   "ParanoiaInfo": "You have a portable meeting button",
   "PsychicInfo": "One of the red names are <color=#ff1919>evil</color>",
   "SabotageMasterInfo": "Vent and fix sabotages quickly",
-  "SheriffInfo": "Kill <color=#ff1919>Impostors</color> & <color=#7f8c8d>Neutral Killers</color>",
+  "SheriffInfo": "Kill <color=#ff1919>Impostors</color> & <color=#ffab1b>Neutral Killers</color>",
   "CopyCatInfo": "Use kill button to copy target's role",
   "SnitchInfo": "Finish your tasks to find the <color=#ff1919>Impostors</color>",
   "MarshallInfo": "Finish your tasks to prove your innocence",
@@ -1087,7 +1087,7 @@
   "ConfirmEjections.Team": "Team",
   "ConfirmEjections.Role": "Role",
   "ShowImpRemainOnEject": "Show remaining <color=#ff1919>Impostors</color> on ejects",
-  "ShowNKRemainOnEject": "Show remaining <color=#7f8c8d>Neutral Killers</color> on ejects",
+  "ShowNKRemainOnEject": "Show remaining <color=#ffab1b>Neutral Killers</color> on ejects",
   "ConfirmEgoistOnEject": "Confirm <color=#5600ff>Egoists</color> on ejection",
   "ConfirmLoversOnEject": "Confirm <color=#ff9ace>Lovers</color> on ejection",
   "ConfirmSidekickOnEject": "Confirm <color=#00b4eb>Sidekicks</color> on ejection",
@@ -1261,7 +1261,7 @@
   "DoctorTaskCompletedBatteryCharge": "Battery Duration",
   "SnitchEnableTargetArrow": "See Arrow Towards Target",
   "SnitchCanGetArrowColor": "See Colored Arrows based on Team Colors",
-  "SnitchCanFindNeutralKiller": "Find <color=#7f8c8d>Neutral Killers</color>",
+  "SnitchCanFindNeutralKiller": "Find <color=#ffab1b>Neutral Killers</color>",
   "SnitchCanFindMadmate": "Find <color=#ff1919>Madmates</color>",
   "SnitchRemainingTaskFound": "Remaining tasks to be known",
   "SpeedBoosterUpSpeed": "Increase Speed by",
@@ -1278,7 +1278,7 @@
   "CanTargetNeutralChaos": "Can Target <color=#ffab1b>Neutral</color> <color=#D4AF37>Chaos</color>",
   "SidekickSheriffCanGoBerserk": "<color=#00b4eb>Recruited</color> <color=#f8cd46>Sheriff</color> Can Go Nuts",
   "LawyerCanTargetImpostor": "Can Target <color=#ff1919>Impostors</color>",
-  "LawyerCanTargetNeutralKiller": "Can Target <color=#7f8c8d>Neutral Killers</color>",
+  "LawyerCanTargetNeutralKiller": "Can Target <color=#ffab1b>Neutral Killers</color>",
   "LawyerCanTargetCrewmate": "Can Target <color=#8cffff>Crewmates</color>",
   "LawyerCanTargetJester": "Can Target <color=#ec62a5>Jester</color>",
   "LawyerChangeRolesAfterTargetKilled": "When Target Dies, <color=#008080>Lawyer</color> becomes",
@@ -3215,9 +3215,10 @@
   "BanditCanStealImpOnlyAddon": "Can Steal <color=#ff1919>Impostor</color> Only Addons",
   "Commander": "Commander",
   "CommanderInfo": "Command your team",
-  "CommanderInfoLong": "(Crewmates):\\nAs the Commander, you can switch between 2 modes by venting: Whistle and Mark. You can execute the selected action by shapeshifting/petting your pet.\\n\\nMark: Marks your shapeshift target with a unique color visible to all impostors. Use this to command them to kill that player!\\n\\nWhistle: This tells all impostors to come to you and gives them each an arrow pointing towards you.",
+  "CommanderInfoLong": "(Impostors):\\nAs the Commander, you can switch between 2 modes by venting: Whistle and Mark. You can execute the selected action by shapeshifting/petting your pet.\\n\\nMark: Marks your shapeshift target with a unique color visible to all impostors. Use this to command them to kill that player!\\n\\nWhistle: This tells all impostors to come to you and gives them each an arrow pointing towards you.",
   "CommanderNotify": "The Commander wants you to meet with them",
   "CommanderTarget": "<size=1.7>Commander's target</color>",
+  "CannotSpawnAsSoloImp": "Cannot Spawn as Solo Impostor",
   "Nimble": "Nimble",
   "NimbleInfo": "Grants Vent Access",
   "NimbleInfoLong": "\\nGrants vent access for crewmate roles.",
