Anti Adminer Buff

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3220,6 +3220,11 @@
   "CommanderNotify": "The Commander wants you to meet with them",
   "CommanderTarget": "<size=1.7>Commander's target</color>",
   "CannotSpawnAsSoloImp": "Cannot Spawn as Solo Impostor",
+  "EnableExtraAbility": "Enable Extra Ability",
+  "CanOnlyUseWhileAnyWatch": "Can Only Use Ability When There is a Device Usage Alert",
+  "AADelay": "Time to Leave Device",
+  "AAWarning": "<#ffff00>You must move away from this device or you die!</color>",
+  "AADone": "The process has finished",
   "Nimble": "Nimble",
   "NimbleInfo": "Grants Vent Access",
   "NimbleInfoLong": "\\nGrants vent access for crewmate roles.",
