Add Bloodlust (add-on) (it's really cool)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -258,6 +258,7 @@
   "Ntr": "Neptune",
   "Watcher": "Watcher",
   "Sleuth": "Sleuth",
+  "Bloodlust": "Bloodlust",
   "Stained": "Stained",
   "Clumsy": "Clumsy",
   "Mischievous": "Mischievous",
@@ -315,6 +316,7 @@
   "Prefix.Ntr": "Neptune",
   "Prefix.Watcher": "Watcher",
   "Prefix.Sleuth": "Sleuth",
+  "Prefix.Bloodlust": "Bloodlust",
   "Prefix.Stained": "Stained",
   "Prefix.Clumsy": "Clumsy",
   "Prefix.Mischievous": "Mischievous",
@@ -569,6 +571,7 @@
   "AsthmaticInfo": "Stop And Go",
   "MagnetInfo": "Pull your victims to you",
   "SleuthInfo": "Know the roles of the bodies you report",
+  "BloodlustInfo": "You can kill",
   "StainedInfo": "Your killer gets a violet name for 3s",
   "ClumsyInfo": "You trip while walking",
   "MischievousInfo": "You can sabotage",
@@ -774,6 +777,7 @@
   "WatcherInfoLong": "(Add-ons):\\nDuring the meeting, Watcher can see everyone's votes.",
   "MagnetInfoLong": "(Add-ons):\\nWhen you kill, your victims lunge to you, instead of you lunging to them",
   "SleuthInfoLong": "(Add-ons):\\nYou know the roles of the bodies you report.",
+  "BloodlustInfoLong": "(Add-ons):\\nYou can kill. You are a neutral killer, while also keeping the ability of your role (as much as host-only limitations allow).",
   "StainedInfoLong": "(Add-ons):\\nYour killer gets a violet name for 3 seconds.",
   "ClumsyInfoLong": "(Add-ons):\\nWhile walking, you have a small chance of tripping, meaning you freeze for a few seconds.",
   "MischievousInfoLong": "(Add-ons):\\nYou can sabotage.",
@@ -2345,6 +2349,7 @@
   "BelongTo": "{0} belongs to {1}",
   "GG": "GG! No more killers remain. <#8cffff>Crewmates</color> win!",
   "IWonderWhatsLeft": "<#ff1919>Impostors</color> are dead, but <#ffab1b>Neutrals</color> may remain.",
+  "SubText.Bloodlust": "With a secret....",
   "GameOverReason.HumansByVote": "<color=#8cffff>All <color=#ff1919>Impostors</color> and <color=#ffab1b>Neutral Killers</color> were ejected or killed</color>",
   "GameOverReason.HumansDisconnect": "<color=#777777>Crewmates disconnected</color>",
   "GameOverReason.ImpostorByKill": "<color=#ff1919>The Impostors killed everyone</color>",
