Auto-organize add-ons into categories

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -73,6 +73,10 @@
   "ROT.Basic": "★ Basic Roles",
   "ROT.BasicNK": "★ Basic Neutral Killing Roles",
   "ROT.BasicNNK": "★ Basic Non-Killing Neutral Roles",
+  "ROT.AddonType.ImpOnly": "★ Impostor-Only Add-ons",
+  "ROT.AddonType.Helpful": "★ Helpful Add-ons",
+  "ROT.AddonType.Harmful": "★ Harmful Add-ons",
+  "ROT.AddonType.Mixed": "★ Mixed Add-ons",
   "GM": "Game Master",
   "Sunnyboy": "Sunnyboy",
   "Bard": "Bard",
