Minor fixes (Commander, Warlock, Pets in lobby), Extended Dark Theme, Improved Visionary, Improved Code in NameColorManager, Allow some characters in free chat input field

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -666,7 +666,7 @@
   "TwisterInfoLong": "(Impostors):\\nAs the Twister, you can use shapeshifting/petting to randomly swap the position of all players.\\nThe Twister itself will not swap places with anyone and players who are in vents cannot be teleported.",
   "LurkerInfoLong": "(Impostors):\\nAs the Lurker, you can jump into a vent to reduce your cooldown by a certain number of seconds. After you kill, your cooldown is reset to its original value.",
   "ConvictInfoLong": "(Madmates):\\nAs the Convict, you originally were an Executioner or Lawyer.\\nYour target had been killed and now you work for the Impostors.",
-  "VisionaryInfoLong": "(Impostors):\\nAs the Visionary, you see the alignments of living players during a meeting.\\nThe following info will be displayed on the player.:\\n- The Red name indicates the Impostors.\\n- The Cyan name indicates the Crewmates.\\n- The Gray name indicates the Neutrals.",
+  "VisionaryInfoLong": "(Impostors):\\nAs the Visionary, you see the teams of players you revealed. You can reveal a player's alignment by selecting them as your shapeshifting target, if you have at least 1 ability use left. You gain 1 ability use after each kill you make.\\nThe name color of a revealed player will indicate their team (<#8cffff>Crewmate</color>/<#ff1919>Impostor</color><#ffab1b>Neutral</color>).",
   "RefugeeInfoLong": "(Madmates):\\nAs the Renegade, you were an Amnesiac who remembered an Impostor role.\\n\\nHelp the Impostors kill the crewmates.",
   "UnderdogInfoLong": "(Impostors):\\nAs the Underdog, your kill cooldown is longer until there's a certain amount of players alive.\\nAfter that, your cooldown is shorter.",
   "EvilDivinerInfoLong": "(Impostors):\\nAs the Consigliere, you can reveal the roles of other players using your kill button.\\n\\nSingle click: Reveal role\\nDouble click: Kill\\n\\nIf you run out of reveal uses, your kill button functions normally.",
@@ -2410,7 +2410,7 @@
   "SkeldChance": "Chance that the map is The Skeld",
   "MiraChance": "Chance that the map is MIRA HQ",
   "PolusChance": "Chance that the map is Polus",
-  "DleksChance": "Chance that the map is <color=#66a186>dlekS ehT</color>",
+  "DleksChance": "Chance that the map is dlekS ehT",
   "AirshipChance": "Chance that the map is Airship",
   "FungleChance": "Chance that the map is The Fungle",
   "CamouflageMode.Default": "Default",
