Add Taskcounter (Add-on), Add Impartial, Fix Dleks vents, Chance Arsonist win condition, Display add-ons on game end

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -262,6 +262,7 @@
   "Ntr": "Neptune",
   "Watcher": "Watcher",
   "Sleuth": "Sleuth",
+  "Taskcounter": "Taskcounter",
   "Bloodlust": "Bloodlust",
   "Stained": "Stained",
   "Clumsy": "Clumsy",
@@ -320,6 +321,7 @@
   "Prefix.Ntr": "Neptune",
   "Prefix.Watcher": "Watcher",
   "Prefix.Sleuth": "Sleuth",
+  "Prefix.Taskcounter": "Taskcounter",
   "Prefix.Bloodlust": "Bloodlust",
   "Prefix.Stained": "Stained",
   "Prefix.Clumsy": "Clumsy",
@@ -575,6 +577,7 @@
   "AsthmaticInfo": "Stop And Go",
   "MagnetInfo": "Pull your victims to you",
   "SleuthInfo": "Know the roles of the bodies you report",
+  "TaskcounterInfo": "You see the total tasks completed in real time",
   "BloodlustInfo": "You can kill",
   "StainedInfo": "Your killer gets a violet name for 3s",
   "ClumsyInfo": "You trip while walking",
@@ -781,6 +784,7 @@
   "WatcherInfoLong": "(Add-ons):\\nDuring the meeting, Watcher can see everyone's votes.",
   "MagnetInfoLong": "(Add-ons):\\nWhen you kill, your victims lunge to you, instead of you lunging to them",
   "SleuthInfoLong": "(Add-ons):\\nYou know the roles of the bodies you report.",
+  "TaskcounterInfoLong": "(Add-ons):\\nTask Counter can see the total number of tasks completed (by everyone all together) next to their role name, which updates in real-time.",
   "BloodlustInfoLong": "(Add-ons):\\nYou can kill. You are a neutral killer, while also keeping the ability of your role (as much as host-only limitations allow).",
   "StainedInfoLong": "(Add-ons):\\nYour killer gets a violet name for 3 seconds.",
   "ClumsyInfoLong": "(Add-ons):\\nWhile walking, you have a small chance of tripping, meaning you freeze for a few seconds.",
@@ -984,6 +988,7 @@
   "EnableDarkTheme": "Enable Dark Theme",
   "AutoDisplayKillLog": "Display Kill-log",
   "AutoDisplayLastRoles": "Display Last Roles",
+  "AutoDisplayLastAddOns": "Display Last Add-ons",
   "AutoDisplayLastResult": "Auto Display Last Result",
   "EnableYTPlan": "Enable Youtuber Plan",
   "KickLowLevelPlayer": "Kick players whose level is lower than",
@@ -1168,6 +1173,7 @@
   "ImpostorsCanBeSidekick": "<color=#ff1919>Impostors</color> can be <color=#00b4eb>Sidekick</color>",
   "JackalCanKillSidekick": "<color=#00b4eb>Jackal</color> can kill <color=#00b4eb>Sidekick</color>",
   "SidekickCanKillJackal": "<color=#00b4eb>Sidekick</color> can kill <color=#00b4eb>Jackal</color>",
+  "EvenAfterWinning": "Even After Satisfying Win Condition",
   "ImpostorVision": "Has <color=#ff1919>Impostor</color> Vision",
   "CanUseSabotage": "Can Sabotage",
   "CanKillAllies": "Can Kill <color=#ff1919>Impostors</color>",
@@ -3009,6 +3015,16 @@
   "InvalidUndeadTarget": "Target cannot be recruited",
   "Undead-": "Undead ",
   "BypassShields": "Bypass Shields When Killing",
+  "Impartial": "Impartial",
+  "ImpartialInfo": "Kill Specified Number of Players in Each Team",
+  "ImpartialInfoLong": "(Neutral):\\nAs the Impartial, you must kill a specified number of players from each team to win. You can see how many players you need to kill from each team next to your role name.",
+  "ImpartialImpmin": "Minimum Number of <#ff1919>Impostors</color> to Kill",
+  "ImpartialCrewmin": "Minimum Number of <#8cffff>Crewmates</color> to Kill",
+  "ImpartialNeutralmin": "Minimum Number of <#ffab1b>Neutrals</color> to Kill",
+  "ImpartialImpmax": "Maximum Number of <#ff1919>Impostors</color> to Kill",
+  "ImpartialCrewmax": "Maximum Number of <#8cffff>Crewmates</color> to Kill",
+  "ImpartialNeutralmax": "Maximum Number of <#ffab1b>Neutrals</color> to Kill",
+  "ImpartialCanWinWhenKillingMore": "Can Win Even When Killing More of a Team than the Maximum",
   "SoulHunter": "Soul Hunter",
   "SoulHunterInfo": "Hunt Souls To Win",
   "SoulHunterInfoLong": "(Neutrals):\\nAs the Soul Hunter, you can mark your target via your kill button. In the next meeting, you'll be frozen for a set amount of seconds and your target will be notified about being your target. Your target will not be able to vent, call a meeting or kill you. You must kill your target within a specified number of seconds, else you lose a soul. If you kill your target in time, you gain a soul. Collect a set amount of souls to satisfy your win condition. If your win condition is satisfied at the end of the game, you'll win with the winning team.",
