Fix Add-on display & You're gonna be stumped when I finish custom h&s today

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3225,6 +3225,30 @@
   "Potato": "Player",
   "PotatoInfo": "AVOID HAVING THE HOT POTATO",
   "PotatoInfoLong": "AVOID HAVING THE HOT POTATO",
+  "HideAndSeek": "HIDE AND SEEK",
+  "ModeHideAndSeek": "Gamemode: Hide And Seek",
+  "ModeDescribe.HideAndSeek": "In the Hide And Seek gamemode, seekers have to kill all hiders, while hiders have to complete all tasks without being killed in order to win.",
+  "HideAndSeek_MaxGameTime": "Maximum Game Length",
+  "SeekerVision": "Seeker Vision",
+  "HiderVision": "Hider Vision",
+  "SeekerSpeed": "Seeker Speed",
+  "HiderSpeed": "Hider Speed",
+  "Hider": "HIDER",
+  "HiderInfo": "COMPLETE TASKS TO WIN",
+  "HiderInfoLong": "COMPLETE TASKS TO WIN",
+  "Seeker": "SEEKER",
+  "SeekerInfo": "KILL ALL HIDERS TO WIN",
+  "SeekerInfoLong": "KILL ALL HIDERS TO WIN",
+  "Fox": "FOX",
+  "FoxInfo": "SURVIVE UNTIL THE END TO WIN",
+  "FoxInfoLong": "SURVIVE UNTIL THE END TO WIN",
+  "FoxVision": "Fox Vision",
+  "FoxSpeed": "Fox Speed",
+  "Troll": "TROLL",
+  "TrollInfo": "GET KILLED TO WIN",
+  "TrollInfoLong": "GET KILLED TO WIN",
+  "TrollVision": "Troll Vision",
+  "TrollSpeed": "Troll Speed",
   "GNoCommandInfo": "<b>This Command can only be used when in lobby or after you die.</b>\\n\\ntype <b>/gno X</b> to play guess a number. X can be a number between 0 and 99 (both included). \\n\\nYou get maximum of <color=#ff0000>7 tries</color> to guess the number.\\n\\n Example:- <b>/gno 10</b>",
   "GNoLost": "Oh, you were so close! Just one more guess, and you might have deciphered the Da Vinci code! By the way, <color=#ff0000>the secret number was... {0}!</color> But hey, you were only off by a few billion possibilities.  Better luck next time, Sherlock! ",
   "GNoLow": "Oh, you're really nailing this! It's so low, I almost need a shovel to dig it up!\\nYou have <color=#ff0000>{0} guesses</color> left!",
@@ -3772,6 +3796,5 @@
   "RoleSelected": "<b>The role of {0} in the next game will be{1}</b>",
   "UpReplacedMessage": "/up was replaced by /setrole which allows you to set anyone's role for any game by typing '/setrole (ID) (ROLE)'. You can view ID's with /id.\nTo set your own role like with /up, you need to do '/setrole 0 (ROLE)'.",
   "PingText": "Ping",
-  "SettingsForRoleText": "Settings for",
-  "NotAssigned": " "
+  "SettingsForRoleText": "Settings for"
 }
