--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3237,6 +3237,7 @@
   "HiderVision": "Hider Vision",
   "SeekerSpeed": "Seeker Speed",
   "HiderSpeed": "Hider Speed",
+  "SeekerCanVent": "Seeker Can Vent",
   "Hider": "HIDER",
   "HiderInfo": "COMPLETE TASKS TO WIN",
   "HiderInfoLong": "COMPLETE TASKS TO WIN",
