--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2088,7 +2088,7 @@
   "TabGroup.NeutralRoles": "Neutral Roles",
   "TabGroup.ImpostorRoles": "Impostor Roles",
   "TabGroup.Addons": "Add-Ons",
-  "TabGroup.OtherRoles": "Experimental Roles (Not recommended)",
+  "TabGroup.OtherRoles": "Ghost Roles",
   "TabGroup.TaskSettings": "Game Modifiers",
   "TabGroup.CovenRoles": "Coven Roles",
   "OtherRoles.CrewmateRoles": "★ Crewmate Roles",
@@ -3086,6 +3086,7 @@
   "ExpressInfoLong": "(Crewmates):\\nAs the Express, you gain a small temporary speed boost after each task you complete.",
   "ExpressSpeed": "Increased Speed",
   "ExpressSpeedDur": "Increased Speed Duration",
+  "MinionBlindDuration": "Blind Duration",
   "NiceSwapper": "Swapper",
   "NiceSwapperInfo": "Swap players' votes",
   "NiceSwapperInfoLong": "(Crewmates):\\nAs the Swapper, you can use the command <b>/sw <color=#0000ff>[ID]</color></b> twice to choose 2 players. Those votes received by those 2 players will be swapped.\\nYou can see everyone's <color=#0000ff>ID</color>s next to their name.\\n\\nFor example, if 3 players voted red, and 5 players voted yellow, and you swap red and yellows' IDs, then red will receive 5 votes, and yellow will receive 3 votes.\\n\\nDue to technical difficulties, the Host's original vote will seem unchanged, but it's only visual, their vote will still get swapped.",
