--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1396,6 +1396,7 @@
   "WorkhorseNumLongTasks": "Additional Long Tasks",
   "WorkhorseNumShortTasks": "Additional Short Tasks",
   "SnitchCanBeWorkhorse": "<color=#b8fb4f>Snitch</color> can become <color=#00ffff>Workhorse</color>",
+  "WorkhorseSpawnChance": "<color=#00ffff>Workhorse</color> Spawn Chance",
   "InnocentCanWinByImp": "If their target was an <color=#ff1919>Impostor</color> then they win with them",
   "CapitalismSkillCooldown": "Ability Cooldown",
   "ImpCanBeAvanger": "An <color=#ff1919>Impostor</color> can become an <color=#ffab1c>Avenger</color>",
@@ -1464,6 +1465,8 @@
   "DeactivationIsVisibleOFF": "<color=#ff4c6f>OFF</color>",
   "MedicResetCooldown": "On kill attempt, reset murderer's cooldown to",
   "MedicShieldedCanBeGuessed": "Guessing ignores <color=#00ff97>Medic</color> shield",
+  "MedicShieldBreaksOnKillAttempt": "<color=#00ff97>Medic</color> Shield Breaks on Kill Attempt",
+  "MedicShieldBreakIsVisible": "Shield Break is Visible",
   "MedicAmountOfShields": "Number of Shields Per Game",
   "DivinatorSkillLimit": "(Initial) Max number of ability uses",
   "MadmateSpawnMode": "<color=#ff1919>Madmate</color> spawning mode",
