--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -768,7 +768,7 @@
   "ObliviousInfoLong": "(Atributos):\\n★A Perícia e os Faxineiros não serão o Alheio. O Alheio não pode reportar corpos mortos. Nota: Se um Armador for morto pelo Alheio, a função do Armador funcionará normalmente e o corpo será reportado.",
   "BewilderInfoLong": "(Atributos):\\n★Impostores não serão o Perplexo. O Perplexo talvez tenha uma visão menor/maior dependendo da configuração do Anfitrião. Quando o Perplexo for morto, a visão de quem o matou se tornará igual a do Perplexo.",
   "TruantInfoLong": "(Atributos):\\nDepois de cada reunião, você congela no lugar por algum tempo.",
-  "WorkhorseInfoLong": "(Atributos):\\n★A primeira pessoa a completar todas as tasks se tornará o Burro de Carga, o Burro de Carga dará tarefas adicionais para outros jogadores. A quantidade de tarefas adicionais é definida pelo Anfitrião.",
+  "WorkhorseInfoLong": "(Atributos):\\n★A primeira pessoa a completar todas as tarefas se tornará o Burro de Carga, o Burro de Carga dará tarefas adicionais para outros jogadores. A quantidade de tarefas adicionais é definida pelo Anfitrião.",
   "FoolInfoLong": "(Atributos):\\nO Cão de Caça e o Mecânico não serão o Travesso. O Travesso não pode consertar nenhuma sabotagem.",
   "AvangerInfoLong": "(Atributos):\\n★O Anfitrião pode configurar se o Impostor se tornará Vingador. Quando o Vingador for morto (ejetado e morte não convencional não conta), o Vingador terá vingança de um jogador aleatório.",
   "YoutuberInfoLong": "(Atributos):\\n★Apenas Tripulantes serão Trolls. Quando o Troll é o primeiro jogador a morrer, o Troll vai vencer sozinho. Se o Troll não for o primeiro a morrer, ele será um Tripulante normal. Nota: Métodos de matar não convencionais anularão a habilidade do Troll.",
@@ -1358,7 +1358,8 @@
   "AssignOnlyToCrewmate": "Atribuir apenas a <color=#8cffff>Tripulantes</color>",
   "WorkhorseNumLongTasks": "Tarefas Longas Adicionais",
   "WorkhorseNumShortTasks": "Tarefas Curtas Adicionais",
-  "SnitchCanBeWorkhorse": "<color=#b8fb4f>Agente</color> pode se tornar <color=#00ffff>Trabalhador</color>",
+  "SnitchCanBeWorkhorse": "<color=#b8fb4f>Agente</color> pode se tornar <color=#00ffff>Burro de Carga</color>",
+  "WorkhorseSpawnChance": "Chance do <color=#00ffff>Burro de Carga</color> ser atribuido",
   "InnocentCanWinByImp": "Se o alvo for um <color=#ff1919>Impostor</color>, então os Impostores vencem junto",
   "CapitalismSkillCooldown": "Recarga da Habilidade",
   "ImpCanBeAvanger": "<color=#ff1919>Impostors</color> podem se tornar Vingador",
@@ -1427,6 +1428,8 @@
   "DeactivationIsVisibleOFF": "<color=#ff0000>Desabilitado</color>",
   "MedicResetCooldown": "Na tentativa de matar, redefina a recarga de abate do assassino para",
   "MedicShieldedCanBeGuessed": "Adivinhações ignoram o escudo do <color=#00ff97>Guardião</color>",
+  "MedicShieldBreaksOnKillAttempt": "O escudo do <color=#00ff97>Guardião</color> é quebrado em uma tentativa de abate",
+  "MedicShieldBreakIsVisible": "A Destruição do escudo é visível",
   "MedicAmountOfShields": "Número de Escudos por Jogo",
   "DivinatorSkillLimit": "Número máximo de usos de habilidade",
   "MadmateSpawnMode": "Modo de Geração de <color=#ff1919>Cúmplices</color>",
